# nginx-proxy

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  CNAME  Dockerfile  Dockerfile-staging  Host.py  README.md  SSL.py  Ssl.py  WebServer.py  compose-swarm.yaml  compose.yaml  debug.Dockerfile  default.conf.template  dev-requirements.txt  docker-compose.yml  docker-entrypoint.sh  easy_debug.sh  getSsl.py  getssl  index.html  index.txt  main.py  pyproject.toml  reload  requirements.txt  robots.txt  run_docker.sh  run_local.sh  site.webmanifest  sitemap.xml  test.py  verify
.devcontainer/: devcontainer.json
404/: index.html
acme_nginx/: Acme.py  AcmeV1.py  AcmeV2.py  Cloudflare.py  Readme.md  test_cloudflare.py
blog/: index.html  index.txt
cloudflare/: CloudflareTunnelManager.py
docker/: entry-point.sh  nginx.conf  python-nginx-alpine.Dockerfile
docs/: index.html  index.txt
lost/: Dockerfile  index.html
nginx/: Config.py  ConfigParser.py  DummnNginx.py  DummyNginx.py  Nginx.py  NginxChallengeSolver.py  NginxConf.py  ProxyConfigData.py  Url.py  __init__.py
nginx_proxy/: BackendTarget.py  Container.py  DockerEventListener.py  Host.py  Location.py  NginxConfig.py  NginxProxyApp.py  ProxyConfigData.py  SSL.py  Throttler.py  WebServer.py  __init__.py  certificate_backend.py  ssl_expiry_daemon.py  test  vhosts.py
path_print/: Dockerfile
ssl/: letsencrypt-account.key  letsencrypt-domain.key
tests/: conftest.py  test_event_handling.py
vhosts_template/: artifactory.xxx.com.template  default.conf.jinja2  default.conf.template  error.conf  nginx.conf  (+5 more)
(+87 files in other folders)
